# nanoForge

./: CMakeList.txt  CMakeLists.txt  LICENSE  README.md
include/: AST.h  ASTFactory.hpp  Instruction.h  Instruction.hpp  Lexer.h  Lexer.hpp  Parser.h  SyntaxTree.hpp  Token.h  Token.hpp  TreeNode.hpp
src/: AST.cpp  Lexer.cpp  Parser.cpp  SyntaxChecker.cpp  reader.cpp  test  test.cpp  test_instruction.cpp  test_lexer.cpp
src/compiler/lexer/: Lexer.cpp  Lexer.h
src/include/: Token.h
src/lexer/: Lexer.h
src/parser/: Parser.cpp
src/tests/: lexerTest.cpp
tests/: lexerTest.cpp
